cabal-version: 2.4

name:         trait-lineariser
version:      0.1.0
synopsis:     An executable that can linearise a traits.txt file from a Victoria 2 mod
-- description:
-- bug-reports:
license:      GPL-3.0-only
license-file: LICENSE
author:       moretrim
copyright:    © 2021 moretrim
-- category:
build-type:   Simple

flag review
    description: Build for review (exclusive with release)
    default: False

flag release
    description: Build for a deployable release (exclusive with review)
    default: False

common properties
    default-language: Haskell2010
    default-extensions: TemplateHaskell, QuasiQuotes, OverloadedStrings,
                        NamedFieldPuns,
                        PatternSynonyms, ViewPatterns,
                        LambdaCase, MultiWayIf,
                        TupleSections,
                        StandaloneDeriving,
                        DeriveDataTypeable,
                        DerivingStrategies,
                            DeriveGeneric,
                            GeneralisedNewtypeDeriving,
                            DeriveAnyClass,
                            DerivingVia,
                        MultiParamTypeClasses, FlexibleInstances, UndecidableInstances
                        ScopedTypeVariables, TypeApplications,
                        FlexibleContexts, ConstraintKinds,
                        TypeFamilies,
                        DataKinds, TypeOperators,
                        GADTs

    ghc-options:        -fwarn-incomplete-record-updates

    -- warnings
    if flag(review)
        ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    elif flag(release)
        ghc-options:
    else -- The default is to build for quick development
        ghc-options:    -Wall
                        -Wno-unused-top-binds -Wno-unused-do-bind -Wno-unused-imports
                        -Werror=unticked-promoted-constructors

    -- specific compilation options
    if flag(release)
        ghc-options:    -O2 -optl=-static -optl=-pthread -funbox-small-strict-fields
        cc-options:     -O2 -static
        ld-options:     -O2 -static -pthread
        -- later versions of Cabal
        -- static:            True
        -- executable-static: True

    build-depends: base == 4.*,
                   lens == 4.*,
                   text == 1.*,
                   megaparsec == 8.*,
                   parser-combinators == 1.*

executable trait-lineariser
    import:         properties
    hs-source-dirs: source
    main-is:        CLI.hs
    other-modules:  Traits
    default-extensions: ImplicitParams
    build-depends: filepath == 1.*,
                   encoding == 0.8.*,
                   optparse-applicative == 0.14.*,
                   here == 1.*
