cabal-version: 2.4

name:         trait-lineariser
version:      1.0.0
synopsis:     A tool that can linearise a traits.txt file from a Victoria II mod
-- description:
-- bug-reports:
license:      GPL-3.0-only
license-file: LICENSE
author:       moretrim
copyright:    © 2021 moretrim
-- category:
build-type:   Simple

flag review
    description: Build for review (exclusive with release)
    default: False

flag release
    description: Build for a deployable release (exclusive with review)
    default: False

common properties
    default-language:   Haskell2010
    default-extensions: TemplateHaskell, QuasiQuotes, OverloadedStrings,
                        NamedFieldPuns,
                        PatternSynonyms, ViewPatterns, BangPatterns,
                        LambdaCase, MultiWayIf,
                        TupleSections,
                        StandaloneDeriving,
                        DeriveDataTypeable,
                        DerivingStrategies,
                            DeriveGeneric, DeriveTraversable,
                            GeneralisedNewtypeDeriving,
                            DeriveAnyClass,
                            DerivingVia,
                        MultiParamTypeClasses, FlexibleInstances, UndecidableInstances,
                        ScopedTypeVariables, TypeApplications,
                        FlexibleContexts, ConstraintKinds,
                        TypeFamilies,
                        DataKinds, TypeOperators,
                        GADTs

    -- warnings

    -- Common warnings, may be overriden by builds—put -Wall here first of all, and never in build
    -- specific options due to Cabal’s apparent unintuive order of merged options!
    ghc-options:        -Wall -Wno-name-shadowing
                        -Wincomplete-record-updates
                        -Werror=unticked-promoted-constructors

    if flag(review)
        ghc-options:    -Wname-shadowing -Wtabs -Wincomplete-uni-patterns
                        -Wno-unused-do-bind
    elif flag(release)
        ghc-options:    -Wno-all
                        -Wno-error=unticked-promoted-constructors
    else -- The default is to build for quick development
        ghc-options:    -Wno-unused-top-binds -Wno-unused-do-bind -Wno-unused-imports

    -- specific compilation options

    ghc-options:        -threaded -with-rtsopts=-N

    if flag(release)
        ghc-options:    -O2 -optl=-static -optl=-pthread -funbox-small-strict-fields
        cc-options:     -O2 -static
        ld-options:     -O2 -static -pthread
        -- later versions of Cabal
        -- static:            True
        -- executable-static: True

    build-depends: base == 4.*,
                   mtl == 2.*,
                   lens == 4.*,
                   hashable == 1.*,
                   unordered-containers == 0.2.*,
                   multiset == 0.3.*,
                   text == 1.*,
                   Decimal == 0.5.*,
                   megaparsec == 8.*,
                   parser-combinators == 1.*

executable trait-lineariser
    import:             properties
    hs-source-dirs:     source
    main-is:            CLI.hs
    other-modules:      Types, Types.Parsing,
                        Hardcoded,
                        Format,
                        Traits,
                        Localisation.Base, Localisation,
                        Oob
    default-extensions: ImplicitParams
    build-depends:      async == 2.*,
                        concurrent-output == 1.*,
                        filepath == 1.*,
                        directory == 1.*,
                        temporary == 1.*,
                        encoding == 0.8.*,
                        optparse-applicative == 0.14.*,
                        here == 1.*
